# romanNumerals

./: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  libmoney.la  main  main.c  roman_numerals.c  roman_numerals.h  roman_numerals.lo
src/.deps/: main.Po  roman_numerals.Plo
src/.libs/: libmoney.0.dylib  libmoney.dylib  libmoney.lai  main
tests/: Makefile  Makefile.am  Makefile.in  check_roman_numerals  check_roman_numerals.c
tests/.deps/: check_roman_numerals-check_roman_numerals.Po
tests/.libs/: check_roman_numerals
